# bee

./: .gitmodules  CMakeLists.txt  README.md
include/: bee.h  callback.h  endpoint.h  processor.h
src/: bee.cpp  callback.cpp  endpoint.cpp  main.cpp  processor.cpp
test/: CMakeLists.txt
test/src/: bee_test.cpp  endpoint_test.cpp
